tests/golden/errors/unfused_wall.kso
print "steeping"
print "warming"
>>
print "serving"
