tests/golden/errors/unfused_wall.stderr
error[formatting]: a one-step stage fuses with its wall: write `>> step` on one line
  --> unfused_wall.kso:4:3
   4 |   >>
         ^
